[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Objects/Sock/sock.png" type="Texture" id=1]
[ext_resource path="res://Assets/Objects/Sock/Sock.gd" type="Script" id=2]
[ext_resource path="res://Assets/Themes/SilverTheme-menu.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Themes/SilverTheme-16px.tres" type="Theme" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 9 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "sock"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ) ]
}

[node name="Sock" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/sock = SubResource( 3 )

[node name="LabelContainer" type="Control" parent="."]
visible = false
margin_left = -44.0
margin_top = -37.0
margin_right = 50.0
theme = ExtResource( 4 )

[node name="LabelBackground" type="ColorRect" parent="LabelContainer"]
margin_left = 16.0
margin_top = 13.0
margin_right = 76.0
margin_bottom = 25.0
color = Color( 0.262745, 0.129412, 0.172549, 1 )

[node name="Label" type="Label" parent="LabelContainer"]
margin_left = 19.0
margin_top = 11.0
margin_right = 79.0
margin_bottom = 34.0
theme = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Smell (f)"
align = 1

[connection signal="body_entered" from="." to="." method="_on_Sock_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Sock_body_exited"]
